<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Simple Interest Calculator</string>
    <string name="amount">Loan amount</string>
    <string name="installment">Monthly installment</string>
    <string name="tenor">Tenor (month)</string>
    <string name="interest">Annual Interest</string>
    <string name="action_settings">Settings</string>
    <string name="calculate">Calculate</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="car_db">Car Database</string>
    <string name="back">Back</string>

</resources>
