<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment">

    <TextView android:text="@string/amount" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtAmount"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="false"
        android:layout_alignParentTop="false" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/edtAmount"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="right" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/installment"
        android:id="@+id/txtInstallment"
        android:layout_below="@+id/edtAmount"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/edtInstallment"
        android:layout_alignTop="@+id/txtInstallment"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="right" />

    <TextView
        android:text="@string/tenor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtTenor"
        android:layout_below="@+id/edtInstallment"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/edtTenor"
        android:layout_alignTop="@+id/txtTenor"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="right" />

    <TextView
        android:text="@string/interest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtInterest"
        android:textStyle="bold"
        android:layout_alignTop="@+id/edtInterest"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/edtInterest"
        android:textStyle="bold"
        android:layout_below="@+id/btnCalculate"
        android:layout_alignLeft="@+id/edtTenor"
        android:layout_alignStart="@+id/edtTenor"
        android:layout_marginTop="28dp"
        android:gravity="right"
        android:enabled="true"
        android:editable="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:id="@+id/btnCalculate"
        android:layout_below="@+id/edtTenor"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="calculate" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/car_db"
        android:id="@+id/btnCar"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="showCarDb" />

</RelativeLayout>
